extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_texture_button_pressed() -> void:
	print("Head Pressed")
	pass # Replace with function body.


func _on_chest_pressed() -> void:
	print("Chest Pressed")
	pass # Replace with function body.


func _on_legs_pressed() -> void:
	print("Legs Pressed")
	pass # Replace with function body.


func _on_r_arm_pressed() -> void:
	print("R arm Pressed")
	pass # Replace with function body.


func _on_l_arm_pressed() -> void:
	print("L arm Pressed")
	pass # Replace with function body.
